public/css/custom-lite.css
/* ... */
.menu-icons {
    font-size: 2em;
}
.main-menu-grid img {
    height: 2.5rem;
    width: 2.5rem;
}
.sidebar {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1029;
    background: transparent;
}
#accordionSidebar:not(.toggled) > #sidebar > #sidebarbottompadding {
    display: block;
    margin-bottom: 20em;
}
#accordionSidebar:not(.toggled) > #sidebar > .overlay-sidebarbg {
    position: fixed;
    top: 0;
    left: 0;
    background-image: linear-gradient(90deg,#000000f2,#000000c4);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    display: block;
    height: 100vh;
    width: 100vw;
    z-index: -1;
}
.sidebar.toggled, .no-homepage {
     display: none;
 }
.container {
    display: flex;
    padding-left: calc(env(safe-area-inset-left) + 1em);
    padding-right: calc(env(safe-area-inset-right) + 1em);
    padding-top: calc(env(safe-area-inset-top) + 1em);
    padding-bottom: calc(env(safe-area-inset-bottom) + 1em);
}
.menu-container {
    background: #6b22007a;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    box-shadow: 0 0 20px #2e0f00;
    border: solid 1px #ffa6547a;
}
.navi-items-menu .user-menu-item {
    max-width: 72px;
}
.performance-mode .menu-container {
    background: black;
}

ul#accordionSidebar * {
    z-index: 5;
}
@media (min-width: 2000px) {
    .container-fluid:not(.max-resize) .col-xl-2 {
        flex: 0 0 11.1%;
        max-width: 11.1%;
    }
}
#midSearch, #naviResume {
    display: flex;
    width: 100%;
}
.main-menu-grid {
    width: 322px;
    justify-content: center;
    grid-auto-flow: column;
    margin-left: auto;
    margin-right: auto;
    flex-wrap: wrap;
}
.main-menu-grid a {
    padding: 0.25em;
    min-width: 4rem;
    display: flex;
    justify-content: center;
}
@media (min-width:850px) {
    #midSearch {
        width: 800px;
    }
    #naviResume {
        max-width: 400px;
    }
}

.container.menu-top #pushUp {
    display: none;
}
.container.menu-bottom #pushDown {
    display: none;
}
@media (min-width:850px) {
    .container.menu-top #midSearch {
        margin-top: 2em;
    }
    .container.menu-bottom #midSearch {
        margin-bottom: 2em;
    }
}
#pushUp, #pushDown {
    opacity: 0;
    pointer-events: none;
}
.container.show-menu-buttons #pushUp,
.container.show-menu-buttons #pushDown {
    opacity: 1;
    pointer-events: initial;
}
.container .d-none.ajax-imageFav {
    display: initial!important;
    opacity: 0.25;
}

.backdrop-portait, .backdrop-neutral, .backdrop-wide {

}
@media (max-width:767px) {
    .backdrop-neutral:not(.menu-top) #pushDown {
        display: none;
    }
    .container.backdrop-wide:not(.menu-top) #pushDown {
        display: none;
    }
}
@media (max-width:767px) {
    .sequenzia-logo {
        font-size: 1.75em;
    }
    .username {
        font-size: 1.5em
    }
    .image-description {
        font-size: 1em;
    }
    .menu-icons {
        font-size: 1.75em;
    }
    .main-menu-grid img {
        height: 2.5rem!important;
        width: 2.5rem!important;
    }
}
.mobile-only {
    display: flex!important;
}
.desktop-only {
    display: none!important;
}
@media (min-width:706px) {
    .main-menu-grid {
        justify-content: space-around;
    }
    .main-menu-grid {
        width: 100%
    }
    .mobile-only {
        display: none!important;
    }
    .desktop-only {
        display: flex!important;
    }
}
@media (max-width:389px) {
    .main-menu-grid {
        font-size: 1.5em;
        width: 255px;
    }
    .main-menu-grid a {
        min-width: 3rem;
    }
    .main-menu-grid img {
        height: 1.75rem!important;
        width: 1.75rem!important;
    }
}
@media (max-width:320px) {
    .main-menu-grid {
        font-size: 1.25em;
        width: 200px;
    }
    .main-menu-grid a {
        min-width: 2.5rem;
    }
    .main-menu-grid img {
        height: 1.75rem!important;
        width: 1.75rem!important;
    }
}

.topbar #sidebarToggleTop {
    height: 2.5rem;
    width: unset;
}
.p4-safty {
    padding-left: calc(env(safe-area-inset-left) + 2rem);
    padding-right: calc(env(safe-area-inset-right) + 2rem);
    padding-top: calc(env(safe-area-inset-top) + 2rem);
    padding-bottom: calc(env(safe-area-inset-bottom) + 2rem);
}
.top-right {
    margin: calc(env(safe-area-inset-top) + 1.5rem) calc(env(safe-area-inset-right) + 1.5rem) calc(env(safe-area-inset-bottom) + 1.5rem) calc(env(safe-area-inset-left) + 1.5rem)!important;
}
.shine-effect-go .animation-application {
    opacity: 0.125;
    background: linear-gradient(235deg,transparent 0,transparent 54%,rgb(255 123 0 / 78%) 75%,rgb(255 160 2 / 89%) 78%,transparent 82%,transparent 100%) 0 0/500% 100%;
    animation: shineEffectAnimation 8s linear 1;
    -webkit-animation-fill-mode: forwards;
    animation-iteration-count: 1;
    pointer-events: none;
}
@media (max-width: 767px) {
    .toast-container .top-left,
    .toast-container .top-right {
        transform: translateX(-50%);
        top: 0;
        left: 50%;
        right: unset;
    }
}
@media (max-width: 510px) {
    .kms-main-grid {
        max-width: 209px;
    }
}
@keyframes shineEffectAnimation {
    0% {
        background-position: 0% 0;
    }
    100% {
        background-position: 200% 0;
    }
}
.hidden {
    display: none!important;
}
.hidden-default:not(.active) {
    display: none!important;
}

@media (max-width:901px) {
    .user-menu-overlow-show-icon-1 {
        display: none!important;
    }
}
@media (min-width:902px) {
    #midSearch {
        width: 866px;
    }
    .user-menu-overlow-hide-icon-1 {
        display: none!important;
    }
}
@media (min-width:990px) {
    /*#midSearch {
        width: 950px;
    }*/
}
@media (max-width:575px) {
    .boot-card-holder {
        scale: 0.75;
    }
}

